[gd_scene load_steps=13 format=3 uid="uid://noexklswb0ye"]

[ext_resource type="Script" path="res://main.gd" id="1_36i56"]
[ext_resource type="Theme" uid="uid://ghasxkjlcx6f" path="res://main_theme.tres" id="1_bw211"]
[ext_resource type="Theme" uid="uid://jxgq6c1218vb" path="res://invisible_panel.tres" id="3_h2u0p"]
[ext_resource type="Texture2D" uid="uid://dvo572mirc85h" path="res://assets/btn4-hovered.png" id="4_0fl8n"]
[ext_resource type="Script" path="res://panel_container.gd" id="4_npi78"]
[ext_resource type="Script" path="res://curent_task_container.gd" id="5_rlnkj"]
[ext_resource type="Script" path="res://standing_counter_container.gd" id="6_gqklx"]
[ext_resource type="Script" path="res://shortcuts_panel.gd" id="7_hj0yl"]
[ext_resource type="Script" path="res://other_panel.gd" id="8_5dj38"]
[ext_resource type="Texture2D" uid="uid://cvbn2a65pevrn" path="res://reload.png" id="8_fjp6t"]
[ext_resource type="Texture2D" uid="uid://bs58cerk8dixo" path="res://assets/missions menu (frame-up).png" id="9_o0lls"]
[ext_resource type="Texture2D" uid="uid://wcyqnwy21rhv" path="res://assets/missions menu (frame-down).png" id="10_m534g"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bw211")
script = ExtResource("1_36i56")

[node name="time_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.316667
anchor_right = 0.705375
anchor_bottom = 0.105444
offset_right = -0.320004
offset_bottom = 1.12
theme = ExtResource("3_h2u0p")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="time_panel"]
layout_mode = 2
region_rect = Rect2(160, 32, 264, 80)

[node name="time_label" type="Label" parent="time_panel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 75
text = "TIME "
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.448833
anchor_top = 0.193
anchor_right = 0.617646
anchor_bottom = 0.285089
offset_left = 0.239929
offset_top = -0.440002
offset_right = -0.880127
offset_bottom = 0.104004
pivot_offset = Vector2(161, 0)
script = ExtResource("4_npi78")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="date_label" type="Label" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "TEST DATE"
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("4_0fl8n")
region_rect = Rect2(16, 16, 416, 104)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="curent_task_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.691758
anchor_top = 0.785311
anchor_right = 0.945508
anchor_bottom = 0.952249
offset_left = -0.176025
offset_top = -0.136002
offset_right = -0.496094
offset_bottom = -0.312004
script = ExtResource("5_rlnkj")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="curent_task_container"]
layout_mode = 2
texture = ExtResource("4_0fl8n")
region_rect = Rect2(16, 16, 416, 104)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="current_task" type="Label" parent="curent_task_container"]
layout_mode = 2
text = "current_task"
horizontal_alignment = 1

[node name="standing_counter_container" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.408333
anchor_top = 0.414815
anchor_right = 0.724125
anchor_bottom = 0.458497
offset_right = -0.32
offset_bottom = -0.176003
script = ExtResource("6_gqklx")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="standing_counter_container"]
layout_mode = 2
texture = ExtResource("4_0fl8n")
region_rect = Rect2(16, 16, 416, 104)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="standing_counter_container"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="standing_counter_container/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="standing_counter_container/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Timer"

[node name="standing_counter_text" type="Label" parent="standing_counter_container/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "00:00:00"

[node name="CheckBox" type="CheckBox" parent="standing_counter_container/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_bw211")

[node name="reset_button" type="Button" parent="standing_counter_container/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("8_fjp6t")

[node name="shortcuts_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03125
anchor_top = 0.666667
anchor_right = 0.280896
anchor_bottom = 0.944608
offset_right = -0.32
offset_bottom = -0.176003
script = ExtResource("7_hj0yl")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="shortcuts_panel"]
layout_mode = 2
texture = ExtResource("4_0fl8n")
region_rect = Rect2(16, 16, 416, 104)
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50

[node name="MarginContainer" type="MarginContainer" parent="shortcuts_panel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="shortcuts_panel/MarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Web ShortCuts"

[node name="HSeparator" type="HSeparator" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="shortcut_button_7" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Amazon"

[node name="shortcut_button_6" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ChatGPT"

[node name="shortcut_button_5" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Instagram"

[node name="shortcut_button_1" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Godot Docs"

[node name="shortcut_button_4" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reddit"

[node name="shortcut_button_3" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spotify"

[node name="shortcut_button_2" type="Button" parent="shortcuts_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Youtube"

[node name="other_panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.359375
anchor_top = 0.892593
anchor_right = 0.666312
anchor_bottom = 0.977741
offset_right = -0.320004
offset_bottom = 0.0400009
script = ExtResource("8_5dj38")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="other_panel"]
layout_mode = 2

[node name="gpu_info" type="Label" parent="other_panel/VBoxContainer"]
layout_mode = 2

[node name="processor_name" type="Label" parent="other_panel/VBoxContainer"]
layout_mode = 2
text = "TEST NAME"
metadata/_edit_use_anchors_ = true

[node name="ram_total" type="Label" parent="other_panel/VBoxContainer"]
layout_mode = 2

[node name="exit_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.963542
anchor_top = 0.00740741
anchor_right = 0.982938
anchor_bottom = 0.0358148
offset_right = -0.23999
offset_bottom = 0.319996
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="settings_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.916667
anchor_top = 0.00740741
anchor_right = 0.948958
anchor_bottom = 0.0287037
offset_right = 8.0
offset_bottom = 8.0
text = "Settings"
metadata/_edit_use_anchors_ = true

[node name="MissionsMenu(frame-up)" type="Sprite2D" parent="."]
position = Vector2(960, 1028)
texture = ExtResource("9_o0lls")

[node name="MissionsMenu(frame-down)" type="Sprite2D" parent="."]
position = Vector2(960, 48)
texture = ExtResource("10_m534g")

[connection signal="toggled" from="standing_counter_container/MarginContainer/HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="standing_counter_container/MarginContainer/HBoxContainer/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_7" to="." method="_on_shortcut_button_7_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_6" to="." method="_on_shortcut_button_6_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_5" to="." method="_on_shortcut_button_5_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_1" to="." method="_on_shortcut_button_1_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_4" to="." method="_on_shortcut_button_4_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_3" to="." method="_on_shortcut_button_3_pressed"]
[connection signal="pressed" from="shortcuts_panel/MarginContainer/VBoxContainer/shortcut_button_2" to="." method="_on_shortcut_button_2_pressed"]
[connection signal="pressed" from="exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_settings_button_pressed"]
